fix API URL for render deployment

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -614,8 +614,9 @@
 
     <script>
     // Configuration
-    const API_URL = 'http://localhost:8000/crop-pdf';
-
+    // const API_URL = 'http://localhost:8000/crop-pdf';
+    const API_URL = "/crop-pdf";  // BEST OPTION
+    // const API_URL = https://pdf-croper.onrender.com/crop-pdf
     const dragDropBox = document.getElementById('dragDropBox');
     const fileInput = document.getElementById('fileInput');
     const filesContainer = document.getElementById('filesContainer');
